--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
             const redirectLinks = {
                 'github': 'https://github.com/@catosoriginal',
                 'google': 'https://google.com/404',
+                'google': 'https://youtube.com'
             }
 
             // [ OLD METHOD! ] const path = window.location.pathname.split('/').pop();
