--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
             redirectKey = segments[segments.length - 1];
             } else {
                 document.getElementById('mtext').textContent = 'Not all arguments found.';
-            return
+                return;
             }
 
 
