--- a/404.html
+++ b/404.html
@@ -15,10 +15,12 @@
             const segments = window.location.pathname.split('/').filter(Boolean);
             let redirectKey;
 
-            if (segments.length > 1 && segments.length < 3) {
+           if (segments.length > 1 && segments.length < 3) {
             redirectKey = segments[segments.length - 1];
+            } else if (segments.length === 1) {
+            redirectKey = segments[0];
             } else {
-                redirectKey = "ERROR";
+            redirectKey = "ERROR";
             }
 
 
