--- a/404.html
+++ b/404.html
@@ -1,74 +1,54 @@
 <!DOCTYPE html>
 <html lang="eng"> 
-    <body>
-        <p id="mtext"></p>
-        <script>
-            console.log("1")
+<body>
+    <p id="mtext"></p>
+    <script>
+        const redirectLinks = {
+            'github': 'https://github.com/@catosoriginal',
+            'google': 'https://google.com/',
+        }
 
-            const redirectLinks = {
-                'github': 'https://github.com/@catosoriginal',
-                'google': 'https://google.com/',
-            }
+        const segments = window.location.pathname.split('/').filter(Boolean);
+        let redirectKey;
+        let password = new URLSearchParams(window.location.search).get("p");
+        if (!password) password = "none";
 
-            // [ OLD METHOD! ] const path = window.location.pathname.split('/').pop();
-            // [ OLD METHOD! ] const hash = window.location.hash.slice(1);
-
-            const segments = window.location.pathname.split('/').filter(Boolean);
-            let redirectKey;
-            let query = window.location.search;
-            const params = new URLSearchParams(query);
-            let password = params.get("p");
-            if (!password) {
-            password = "none";
-}
-
-           if (segments.length > 1 && segments.length < 3) {
+        if (segments.length > 1 && segments.length < 3) {
             redirectKey = segments[segments.length - 1];
-            } else if (segments.length === 1) {
+        } else if (segments.length === 1) {
             redirectKey = segments[0];
-            } else {
+        } else {
             redirectKey = "ERROR";
-            }
+        }
 
-
-            if (redirectLinks[redirectKey]) {
+        if (redirectLinks[redirectKey]) {
             document.getElementById('mtext').textContent = 'Redirecting to ' + redirectLinks[redirectKey];
             window.location.href = redirectLinks[redirectKey];
-           } else {
-            console.log("logging to the server")
-             const serverlink = "https://go-server-idym.onrender.com/"
-             const data = {
-              key: redirectKey,
-              password: password
-             };
+        } else {
+            const serverlink = "https://go-server-idym.onrender.com/geturl";
+            const data = { key: redirectKey, password: password };
 
-             fetch(url, {
-    method: "POST",
-    headers: {
-        "Content-Type": "application/json"
-    },
-    body: JSON.stringify(data)
-})
-.then(response => {
-    if (!response.ok) {
-        // Ошибка от сервера
-        return response.json().then(err => { throw err });
-    }
-    return response.json();
-})
-.then(result => {
-    console.log("Taked URL:", result.url);
-    document.getElementById('mtext').textContent = 'Redirecting to' + result.url;
-    window.location.href = result.url;
-})
-.catch(err => {
-    console.error("Request Error:", err.error);
-    document.getElementById('mtext').textContent = err.error;
-});
-             
-
-             document.getElementById('mtext').textContent = 'Not Found.';
-           }
-        </script>
-    </body>
+            fetch(serverlink, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify(data)
+            })
+            .then(response => {
+                if (!response.ok) {
+                    return response.json().then(err => { throw err });
+                }
+                return response.json();
+            })
+            .then(result => {
+                console.log("Taked URL:", result.url);
+                document.getElementById('mtext').textContent = 'Redirecting to ' + result.url;
+                window.location.href = result.url;
+            })
+            .catch(err => {
+                console.error("Request Error:", err.error);
+                document.getElementById('mtext').textContent = err.error || "Not Found.";
+            });
+        }
+    </script>
+</body>
 </html>
