Fix error message display in 404 page

--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
             })
             .catch(err => {
                 console.error("Request Error:", err.error);
-                document.getElementById('mtext').textContent = err.error || "Not Found.";
+                document.getElementById('mtext').textContent = err.error;
             });
         }
     </script>
