Add console log for debugging in 404.html
Added a console log message for debugging.

--- a/404.html
+++ b/404.html
@@ -26,6 +26,7 @@
             window.location.href = redirectLinks[redirectKey];
         } else {
             console.log("bro")
+            console.log("I hope this work dude")
             const serverlink = "https://go-server-idym.onrender.com/geturl";
             const data = { key: redirectKey, password: password };
 
