Refactor error message handling in 404.html
Updated error handling to provide a default message.

--- a/404.html
+++ b/404.html
@@ -26,7 +26,6 @@
             window.location.href = redirectLinks[redirectKey];
         } else {
             console.log("bro")
-            console.log("I hope this work dude")
             const serverlink = "https://go-server-idym.onrender.com/geturl";
             const data = { key: redirectKey, password: password };
 
@@ -48,7 +47,7 @@
             })
             .catch(err => {
                 console.error("Request Error:", err.error);
-                document.getElementById('mtext').textContent = err.error;
+                document.getElementById('mtext').textContent = err.error || "undefined error";
             });
         }
     </script>
