--- a/404.html
+++ b/404.html
@@ -3,62 +3,61 @@
 <body>
     <p id="mtext"></p>
     <script>
-        let redirectLinks = {}
+let redirectLinks = {}
 
-        fetch("publiclinks.json")
-       .then(res => {
-        if (!res.ok) throw new Error("Failed to load JSON");
-        return res.json();
-      })
-     .then(data => {
-        redirectLinks = data;
-      })
-      .catch(err => {
-        console.error("Error while loading JSON:", err);
-      });
+fetch("publiclinks.json")
+  .then(res => {
+    if (!res.ok) throw new Error("Failed to load JSON");
+    return res.json();
+  })
+  .then(data => {
+    redirectLinks = data;
 
-        const segments = window.location.pathname.split('/').filter(Boolean);
-        let redirectKey;
-        let password = new URLSearchParams(window.location.search).get("p");
-        if (!password) password = "none";
+    const segments = window.location.pathname.split('/').filter(Boolean);
+    let redirectKey;
+    let password = new URLSearchParams(window.location.search).get("p");
+    if (!password) password = "none";
 
-        if (segments.length > 1 && segments.length < 3) {
-            redirectKey = segments[segments.length - 1];
-        } else if (segments.length === 1) {
-            redirectKey = segments[0];
-        } else {
-            redirectKey = "ERROR";
-        }
+    if (segments.length > 1 && segments.length < 3) {
+        redirectKey = segments[segments.length - 1];
+    } else if (segments.length === 1) {
+        redirectKey = segments[0];
+    } else {
+        redirectKey = "ERROR";
+    }
 
-        if (redirectLinks[redirectKey]) {
-            document.getElementById('mtext').textContent = 'Redirecting to ' + redirectLinks[redirectKey];
-            window.location.href = redirectLinks[redirectKey];
-        } else {
-            console.log("bro")
-            const serverlink = "https://go-server-idym.onrender.com/geturl";
-            const data = { key: redirectKey, password: password };
+    if (redirectLinks[redirectKey]) {
+        document.getElementById('mtext').textContent = 'Redirecting to ' + redirectLinks[redirectKey];
+        window.location.href = redirectLinks[redirectKey];
+    } else {
+        const serverlink = "https://go-server-idym.onrender.com/geturl";
+        const data = { key: redirectKey, password: password };
 
-            fetch(serverlink, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(data)
-            })
-            .then(response => {
-                if (!response.ok) {
-                    return response.json().then(err => { throw err });
-                }
-                return response.json();
-            })
-            .then(result => {
-                console.log("Taked URL:", result.url);
-                document.getElementById('mtext').textContent = 'Redirecting to ' + result.url;
-                window.location.href = result.url;
-            })
-            .catch(err => {
-                console.error("Request Error:", err.error);
-                document.getElementById('mtext').textContent = err.error || "undefined error";
-            });
-        }
-    </script>
+        fetch(serverlink, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(data)
+        })
+        .then(response => {
+            if (!response.ok) return response.json().then(err => { throw err });
+            return response.json();
+        })
+        .then(result => {
+            console.log("Taked URL:", result.url);
+            document.getElementById('mtext').textContent = 'Redirecting to ' + result.url;
+            window.location.href = result.url;
+        })
+        .catch(err => {
+            console.error("Request Error:", err.error);
+            document.getElementById('mtext').textContent = err.error || "undefined error";
+        });
+    }
+
+  })
+  .catch(err => {
+    console.error("Error while loading JSON:", err);
+    document.getElementById('mtext').textContent = "Failed to load links";
+  });
+</script>
 </body>
 </html>
