--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="eng"> 
     <body>
-        <p id="mtext">Hmm.. Something wrong??? </p>
+        <p id="mtext">You cant. </p>
     </body>
 </html>
