--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng"> 
 <body>
-    <p id="mtext"></p>
+    <p id="mtext">Loading website. Server might be sleeping, please wait</p>
     <script>
 let redirectLinks = {}
 
