--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 <body>
     <p id="mtext">Loading website. Server might be sleeping, please wait</p>
     <script>
+        console.warn("\nWarning!\nI am not responsible for the websites you visit through my site.\nIf you see some bad sites, please report it to me: https://catosoriginal.github.io/go/report\n")
 let redirectLinks = {}
 
 fetch("publiclinks.json")
