--- a/404.html
+++ b/404.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html lang="eng"> 
 <body>
-    <p id="mtext">Loading website. Server might be sleeping, please wait</p>
+    <p id="mtext", style="font-size: 50px;">Loading website. Server might be sleeping, please wait</p>
+    <style>
+          #mtext {
+    font-size: 50px;
+    position: absolute;  
+    top: 50%;  
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    text-align: center;
+    width: 100%;
+    max-width: 90%;
+  }
+    </style>
     <script>
         console.warn("\nWarning!\nI am not responsible for the websites you visit through my site.\nIf you see some bad sites, please report it to me: https://catosoriginal.github.io/go/report\n")
 let redirectLinks = {}
