--- a/404.html
+++ b/404.html
@@ -3,15 +3,18 @@
 <body>
     <p id="mtext", style="font-size: 50px;">Loading website. Server might be sleeping, please wait</p>
     <style>
-          #mtext {
-    font-size: 50px;
-    position: absolute;  
-    top: 50%;  
-    left: 50%; 
-    transform: translate(-50%, -50%); 
+         #mtext {
+    font-size: 5vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
-    width: 100%;
+    width: 90%;
     max-width: 90%;
+    word-wrap: break-word;
+    line-height: 1.2;
+    white-space: normal;
   }
     </style>
     <script>
