Changed Visual Text

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng"> 
 <body>
-    <p id="mtext", style="font-size: 50px;">Loading website. Server might be sleeping, please wait</p>
+    <p id="mtext", style="font-size: 50px;">Loading, please wait. If it takes over 5s, the server is sleeping. Please wait ~30s.</p>
     <style>
          #mtext {
     font-size: 5vw;
