--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@ let redirectLinks = {}
 fetch("publiclinks.json")
   .then(res => {
     if (!res.ok) throw new Error("Failed to load JSON");
-    document.getElementById('mstatus').style.color = rgb(255, 80, 80);
+    document.getElementById('mstatus').style.color = "rgb(255, 80, 80)";
     document.getElementById('mstatus').textContent = "Server Error";
     document.getElementById('mstatusgif').style.visibility = "hidden";
     return res.json();
@@ -60,7 +60,7 @@ fetch("publiclinks.json")
 
     if (redirectLinks[redirectKey]) {
         document.getElementById('mtext').textContent = 'Redirecting to ' + redirectLinks[redirectKey];
-        document.getElementById('mstatus').style.color = rgb(50, 205, 50);
+        document.getElementById('mstatus').style.color = "rgb(50, 205, 50)";
         document.getElementById('mstatus').textContent = "Successfully!";
         document.getElementById('mstatusgif').style.visibility = "hidden";
         window.location.href = redirectLinks[redirectKey];
@@ -80,7 +80,7 @@ fetch("publiclinks.json")
         .then(result => {
             console.log("Taked URL:", result.url);
             document.getElementById('mtext').textContent = 'Redirecting to ' + result.url;
-            document.getElementById('mstatus').style.color = rgb(50, 205, 50);
+            document.getElementById('mstatus').style.color = "rgb(50, 205, 50)";
             document.getElementById('mstatus').textContent = "Successfully!";
             document.getElementById('mstatusgif').style.visibility = "hidden";
             window.location.href = result.url;
@@ -88,7 +88,7 @@ fetch("publiclinks.json")
         .catch(err => {
             console.error("Request Error:", err.error);
             document.getElementById('mtext').textContent = err.error || "undefined error";
-            document.getElementById('mstatus').style.color = rgb(255, 80, 80);
+            document.getElementById('mstatus').style.color = "rgb(255, 80, 80)";
             document.getElementById('mstatus').textContent = "Server Error";
             document.getElementById('mstatusgif').style.visibility = "hidden";
         });
@@ -98,7 +98,7 @@ fetch("publiclinks.json")
   .catch(err => {
     console.error("Error while loading JSON:", err);
     document.getElementById('mtext').textContent = "Failed to load links";
-    document.getElementById('mstatus').style.color = rgb(255, 80, 80);
+    document.getElementById('mstatus').style.color = "rgb(255, 80, 80)";
     document.getElementById('mstatus').textContent = "Server Error";
     document.getElementById('mstatusgif').style.visibility = "hidden";
   });
