--- a/404.html
+++ b/404.html
@@ -8,31 +8,58 @@
 </div>
     <style>
         #loader-container {
-  display: flex;
-  flex-direction: column; 
-  align-items: center;   
-  justify-content: center; 
-  gap: 20px;           
-  text-align: center;
-  
-  max-width: 800px;
-  margin: 50px auto;
-  padding: 20px;      
-  box-sizing: border-box;
-}
-
-.statustext {
-    color:rgb(255, 127, 80);
-    background-color: beige;
-}
-
-.text {
-  font-size: 5vw;
-  max-width: 90%;
-  word-wrap: break-word;
-  line-height: 1.2;
-  white-space: normal;
-}
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      text-align: center;
+      max-width: 500px;
+      margin: 50px auto;
+      padding: 30px 25px;
+      background-color: #fff5ee;
+      border-radius: 25px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      box-sizing: border-box;
+      transition: all 0.3s ease;
+    }
+    .maintext {
+      font-size: clamp(16px, 4vw, 28px);
+      color: #333;
+      line-height: 1.4;
+      word-wrap: break-word;
+      margin: 0;
+    }
+    .statusgif {
+      width: 80px;
+      height: 80px;
+      object-fit: contain;
+      transition: all 0.3s ease;
+    }
+    .statustext {
+      font-size: clamp(14px, 3vw, 22px);
+      font-weight: bold;
+      color: rgb(255, 127, 80);
+      background-color: #fff0d1;
+      padding: 10px 20px;
+      border-radius: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      margin: 0;
+      transition: all 0.3s ease;
+    }
+    .hidden {
+      display: none !important;
+    }
+    @media (max-width: 400px) {
+      #loader-container {
+        padding: 20px 15px;
+        gap: 15px;
+      }
+      .statusgif {
+        width: 60px;
+        height: 60px;
+      }
+    }
     </style>
     <script>
         console.warn("\nWarning!\nI am not responsible for the websites you visit through my site.\nIf you see some bad sites, please report it to me: https://catosoriginal.github.io/go/report\n")
