--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng"> 
 <body>
+    <title>GO Redirect</title>
     <div id="loader-container">
     <p class="text maintext" id="mtext">Loading, please wait. If it takes over 5s, the server is sleeping. Please wait ~30s.</p>
     <img class="text statusgif" id="mstatusgif" src="assets/loading.gif">
