fixed styles AGAIN

--- a/404.html
+++ b/404.html
@@ -8,6 +8,14 @@
     <p class="text statustext" id="mstatus">Loading</p>
 </div>
     <style>
+        body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #fef8f2;
+    }
         #loader-container {
       display: inline-flex;
       flex-direction: column;
