--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="eng"> 
     <body>
-        <p id="mtext">You cant. </p>
+        <p id="mtext"></p>
+        
     </body>
+    <script>
+        window.location.href = "https://catosoriginal.github.io/go/home"
+    </script>
 </html>
