changed text lol

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <body>
     <title>GO Redirect</title>
     <div id="loader-container">
-    <p class="text maintext" id="mtext">Loading, please wait. If it takes over 5s, the server is sleeping. Please wait ~30s.</p>
+    <p class="text maintext" id="mtext">If this message does not disappear within 5 seconds, the server is currently sleeping.<br>Please wait about 30 seconds for it to wake up and load.</p>
     <img class="text statusgif" id="mstatusgif" src="assets/loading.gif">
     <p class="text statustext" id="mstatus">Loading</p>
 </div>
